<resources>
    <string name="app_name">Mayekid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="opacity">Opacity</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="banner_ad_unit_id_mayek2">ca-app-pub-7027483312186624/8538661396</string>
    <string name="banner_ad_unit_id_mayek">ca-app-pub-7027483312186624/9583892592</string>
    <string name="banner_ad_unit_id_picture">ca-app-pub-7027483312186624/3537358995</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_itservz_mayek">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_masing">ca-app-pub-7027483312186624/1687888993</string>

    <string name="facebook_app_id">1782121292033969</string>
</resources>
